# LinAlgZero

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: semantic-release.yml
docs/: index.md  modules.md
docs/stylesheets/: extra.css
linalgzero/: run_training.py
linalgzero/data/: cifar_dataset.py
linalgzero/experiments/: config.py  linalgzero.yml  linalgzero_debug.yml
linalgzero/metrics/: accuracy.py  metrics.py
linalgzero/models/: simple_cnn.py
linalgzero/trainers/: trainer.py  zero_trainer.py
linalgzero/utils/: helpers.py  session.py  wandb_logger.py
modules/: index.html
search/: search_index.json
tests/: test_config.py  test_foo.py  test_trainer.py  test_wandb_logger.py
tests/experiments/: test_config.py
tests/utils/: test_session.py  test_wandb_logger.py
